Finish Category III: Audiovisual Awards

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -910,4 +910,100 @@ published: true
 </div>
 
 
+<hr className="my-4" />
+
+## Best Ending
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Kaiju No. 8 <sup>[<a href="https://myanimelist.net/anime/52588/Kaijuu_8-gou" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153288/Kaijuu-8gou/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Nobody**" <sup>[<a href="https://www.youtube.com/watch?v=aiCMXJ4zKWA" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=ztROkFCJSeE" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Toya Ooshima, OneRepublic</li>
+    
+    <li>Ranma ½ <sup>[<a href="https://myanimelist.net/anime/59145/Ranma_½_2024" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/178533/Ranma-12-2024/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Antanante**" <sup>[<a href="https://www.youtube.com/watch?v=Sy-CYyfmO6g" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=Ppqrne0r18I" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Fumiyuki Uehara, Minami Kitamura, Riria</li>
+
+    <li>Re:Zero S3 <sup>[<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Nox Lux**" <sup>[<a href="https://www.youtube.com/watch?v=aPzI7S3MVI4" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=bVUEuXOjeDc" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Takashi Mamezuka, MYTH & ROID</li>
+
+    <li>Too Many Losing Heroines <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Love 2000**" <sup>[<a href="https://www.youtube.com/watch?v=2czbGCYz6gk" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=oXZcuHIR5ko" target="_blank" rel="noopener noreferrer">Full</a>\]</sup> <br /> Aoi Otani, Bonta Junchukan, Hikaru Tono</li>
+
+    <li>Too Many Losing Heroines <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Crazy For You**" <sup>[<a href="https://www.youtube.com/watch?v=GyckNS-qOcM" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=fWVhcojPqQI" target="_blank" rel="noopener noreferrer">Full</a>\]</sup> <br /> Akihito Sudou, Shion Wakayama</li>
+
+    <li>Too Many Losing Heroines <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Feel My Soul**" <sup>[<a href="https://www.youtube.com/watch?v=FYuKV7m_CqM" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=7vEp8UPHdnE" target="_blank" rel="noopener noreferrer">Full</a>\]</sup> <br /> Kiiro Aose, Momoka Terasawa</li>
+
+    <li>Brave Bang Bravern <sup>[<a href="https://myanimelist.net/anime/55528/Yuuki_Bakuhatsu_Bang_Bravern" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/165598/Yuuki-Bakuhatsu-Bang-Bravern/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Portrait of Twin Flames**" <sup>[<a href="https://www.youtube.com/watch?v=SIRO9Hk5ACs" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=L9Y1eFc08MY" target="_blank" rel="noopener noreferrer">Full</a>\]</sup> <br /> Kenta Hayashi, Ryouta Suzuki, Youhei Azakami</li>
+
+    <li>The Elusive Samurai <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Kamakura Style**" <sup>[<a href="https://www.youtube.com/watch?v=VNl4J9b_xhE" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=ikzBo9_Qdnk" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Yuuki Yonemori, Botchi Boromaru</li>
+
+    <li>Days with My Stepsister <sup>[<a href="https://myanimelist.net/anime/52481/Gimai_Seikatsu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/152681/Gimai-Seikatsu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Suisou no Buranko**" <sup>[<a href="https://www.youtube.com/watch?v=wkSVOJ3MTkw" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=22Btuugzr6E" target="_blank" rel="noopener noreferrer">Full</a>\]</sup> <br /> hewa, Kitri</li>
+
+    <li>You Are Ms. Servant <sup>[<a href="https://myanimelist.net/anime/57611/Kimi_wa_Meido-sama" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/172190/Kimi-wa-Meidosama/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Hyoujou Sabun**" <sup>[<a href="https://www.youtube.com/watch?v=IniiUUdmXBU" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=lB3mij3gmVo" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Ray Wakui, DUSTCELL</li>
+
+    <li>Solo Leveling <sup>[<a href="https://myanimelist.net/anime/52299/Ore_dake_Level_Up_na_Ken" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151807/Ore-dake-Level-Up-na-Ken/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Request**" <sup>[<a href="https://www.youtube.com/watch?v=HCqVYCNZIrQ" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=ebYmIov9zAY" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Hiromu Oushiro, krage</li>
+
+    <li>Girls Band Cry <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**I’m Nobody**" <sup>[<a href="https://www.youtube.com/watch?v=Go6wsJwKf4c" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=dJottC7FmYc" target="_blank" rel="noopener noreferrer">Full</a>\]</sup> <br /> whitepuzzle, Togenashi Togeari</li>
+
+</ul>
+
+**Winners**
+
+- **People's Choice:** 
+    - Kaiju No. 8, “Nobody”, Toya Ooshima, OneRepublic
+    - Solo Leveling, “Request”, Hiromu Oushiro, krage
+- **Jury Choice:** Ranma ½, “Antanante”, Fumiyuki Uehara, Minami Kitamura, Riria
+
+    <img className="my-1 md:w-3/4 mx-auto" src="/images/blog/bacademy-awards-2025/best-ending-peoples-choice.webp" />
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 mb-3 place-items-center">
+        <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '15px', 'margin': 'auto'}} src="https://www.youtube.com/embed/aiCMXJ4zKWA" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+
+        <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '15px', 'margin': 'auto'}} src="https://www.youtube.com/embed/HCqVYCNZIrQ" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+</div>
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-ending-jury-choice.webp" />
+    <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/Sy-CYyfmO6g" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+</div>
+
+<hr className="my-4" />
+
+## Best Episode
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Bleach: Thousand Year Blood War, Part 3 <sup>[<a href="https://myanimelist.net/anime/56784/Bleach__Sennen_Kessen-hen_-_Soukoku-tan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/169755/BLEACH-Sennen-Kessenhen--Soukokutan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br />EP10: “Baby, Hold Your Hand 2</li>
+
+    <li>Blue Lock S2 <sup>[<a href="https://myanimelist.net/anime/54865/Blue_Lock_vs_U-20_Japan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163146/Blue-Lock-VS-U20-JAPAN/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP14: “Last Attack”</li>
+
+    <li>Mushoku Tensei S2 <sup>[<a href="https://myanimelist.net/anime/55888/Mushoku_Tensei_II__Isekai_Ittara_Honki_Dasu_Part_2" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166873/Mushoku-Tensei-II-Isekai-Ittara-Honki-Dasu-Part-2/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP9: Magic Circles of the Sixth Stratum</li>
+
+    <li>Re:Zero S3 <sup>[<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP7: “The Newest of Heroes and the Most Ancient of Heroes”</li>
+
+    <li>Dandadan <sup>[<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> E7: “To a Kinder World”</li>
+
+    <li>The Magical Girl and the Evil Lieutenant Used to be Archenemies <sup>[<a href="https://myanimelist.net/anime/57217/Katsute_Mahou_Shoujo_to_Aku_wa_Tekitai_shiteita" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170938/Katsute-Mahou-Shoujo-to-Aku-wa-Tekitai-Shite-Ita/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP12: “Side B / Side M”</li>
+
+    <li>Sound! Euphonium S3 <sup>[<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP12: “The Last Soloist”</li>
+
+    <li>Oblivion Battery <sup>[<a href="https://myanimelist.net/anime/56165/Boukyaku_Battery_TV" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167927/Boukyaku-Battery-TV/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP11: “I’m a Liar”</li>
+
+    <li>Delicious in Dungeon <sup>[<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP3: “Living Armor”</li>
+
+    <li>Demon Slayer S4 <sup>[<a href="https://myanimelist.net/anime/55701/Kimetsu_no_Yaiba__Hashira_Geiko-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166240/Kimetsu-no-Yaiba-Hashira-Geikohen" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP8: “The Hashira Unite”</li>
+
+    <li>The Elusive Samurai <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> E2: “The Gentle Uncle”</li>
+
+    <li>Days with My Stepsister <sup>[<a href="https://myanimelist.net/anime/52481/Gimai_Seikatsu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/152681/Gimai-Seikatsu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> EP12: “and”</li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Dandadan, EP7: "To a Kinder World"
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-episode-jury-choice.webp" />
+</div>
+
 <hr className="my-0 mt-2 mb-4" />
