Minor capitalisation change for consistency

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -121,7 +121,7 @@ published: true
     <li><a href="https://myanimelist.net/character/193134/Saki_Ayase" target="_blank" rel="noopener noreferrer">Saki Ayase</a>, Days with My Stepsister</li>
     <li><a href="https://myanimelist.net/character/177491/Yoichi_Isagi" target="_blank" rel="noopener noreferrer">Yoichi Isagi</a>, Blue Lock</li>
     <li><a href="https://myanimelist.net/character/120015/Kumiko_Oumae" target="_blank" rel="noopener noreferrer">Kumiko Oumae</a>, Sound! Euphonium S3</li>
-    <li><a href="https://myanimelist.net/character/22050/Nadeko_Sengoku" target="_blank" rel="noopener noreferrer">Nadeko Sengoku</a>, Monogatari Series: OFF & Monster Season</li>
+    <li><a href="https://myanimelist.net/character/22050/Nadeko_Sengoku" target="_blank" rel="noopener noreferrer">Nadeko Sengoku</a>, Monogatari Series: Off & Monster Season</li>
     <li><a href="https://myanimelist.net/character/230309/Nina_Iseri" target="_blank" rel="noopener noreferrer">Nina Iseri</a>, Girls' Band Cry</li>
 </ul>
 
