Start Category IV. Complete Retrospective and Best Returning Series

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -54,9 +54,9 @@ published: true
     </div>
     <div>
     [Category IV: Grand Prizes](#category-iv-grand-prizes)
-    - [Retrospect: Best Anime (2004)](#retrospect-best-anime-2004)
-    - [Best Original](#best-original)
+    - [Retrospective: Anime of the Year (2004)](#retrospective-anime-of-the-year-2004)
     - [Best Returning Series](#best-returning-series)
+    - [Best Original](#best-original)
     - [Manga of the Year](#manga-of-the-year)
     - [Film of the Year](#film-of-the-year)
     - [Anime of the Year](#anime-of-the-year)
@@ -1000,6 +1000,95 @@ published: true
 
 <div className="grid grid-cols-1 gap-2 place-items-center">
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-episode-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+# Category IV: Grand Prizes
+
+## Retrospective: Anime of the Year (2004)
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-5 place-items-start">
+    <li>Beck: Mongolian Chop Squad <sup>[<a href="https://myanimelist.net/anime/57/Beck" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/57/BECK/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Bleach <sup>[<a href="https://myanimelist.net/anime/269/Bleach" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/269/BLEACH/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+    
+    <li>Elfen Lied <sup>[<a href="https://myanimelist.net/anime/226/Elfen_Lied" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/226/Elfen-Lied/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Futari wa Pretty Cure <sup>[<a href="https://myanimelist.net/anime/603/Futari_wa_Precure" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/603/Futari-wa-Precure/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Gankutsuou: The Count of Monte Cristo <sup>[<a href="https://myanimelist.net/anime/239/Gankutsuou" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/239/Gankutsuou/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+    
+    <li>Howl’s Moving Castle <sup>[<a href="https://myanimelist.net/anime/431/Howl_no_Ugoku_Shiro" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/431/Howl-no-Ugoku-Shiro/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Maria-sama ga Miteru <sup>[<a href="https://myanimelist.net/anime/158/Maria-sama_ga_Miteru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/158/Mariasama-ga-Miteru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Mind Game <sup>[<a href="https://myanimelist.net/anime/875/Mind_Game" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/875/Mind-Game/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Monster <sup>[<a href="https://myanimelist.net/anime/19/Monster" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/19/MONSTER/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Paranoia Agent <sup>[<a href="https://myanimelist.net/anime/323/Mousou_Dairinin" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/323/Mousou-Dairinin/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Samurai Champloo <sup>[<a href="https://myanimelist.net/anime/205/Samurai_Champloo" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/205/Samurai-Champloo/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Sgt. Keroro <sup>[<a href="https://myanimelist.net/anime/516/Keroro_Gunsou" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/516/Keroro-Gunsou/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+    
+</ul>
+
+**Winners**
+
+- **People's Choice:** Monster
+- **Jury Choice:** Mind Game
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/retrospective-anime-of-the-year-2004-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/retrospective-anime-of-the-year-2004-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Returning Series
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Bartender: Glass of God <sup>[<a href="https://myanimelist.net/anime/53407/Bartender__Kami_no_Glass" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155890/Bartender-Kami-no-Glass/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Bleach: Thousand Year Blood War, Part 3 <sup>[<a href="https://myanimelist.net/anime/56784/Bleach__Sennen_Kessen-hen_-_Soukoku-tan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/169755/BLEACH-Sennen-Kessenhen--Soukokutan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>The Dangers in My Heart Season 2 <sup>[<a href="https://myanimelist.net/anime/55690/Boku_no_Kokoro_no_Yabai_Yatsu_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166216/Boku-no-Kokoro-no-Yabai-Yatsu-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Dragon Ball: Daima <sup>[<a href="https://myanimelist.net/anime/56894/Dragon_Ball_Daima" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170083/Dragon-Ball-DAIMA/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Fairy Tail: 100 Years Quest <sup>[<a href="https://myanimelist.net/anime/49785/Fairy_Tail__100-nen_Quest" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/139095/FAIRY-TAIL-100-YEARS-QUEST/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Monogatari: Off & Monster Season <sup>[<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Natsume's Book of Friends Season 7 <sup>[<a href="https://myanimelist.net/anime/55823/Natsume_Yuujinchou_Shichi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166611/Natsume-Yuujinchou-Shichi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Ranma ½ (2024) <sup>[<a href="https://myanimelist.net/anime/59145/Ranma_½_2024" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/178533/Ranma-12-2024/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Re:Zero Season 3 <sup>[<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Sound! Euphonium Season 3 <sup>[<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Spice & Wolf (2024) <sup>[<a href="https://myanimelist.net/anime/51122/Ookami_to_Koushinryou__Merchant_Meets_the_Wise_Wolf" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/145728/Ookami-to-Koushinryou-MERCHANT-MEETS-THE-WISE-WOLF/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yuru Camp Season 3 <sup>[<a href="https://myanimelist.net/anime/53410/Yuru_Camp△_Season_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155908/Yuru-Camp-SEASON-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winners**
+
+- **People's Choice:** Bleach: Thousand Year Blood War, Part 3
+- **Jury Choice:** Ranma ½
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-returning-series-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-returning-series-jury-choice.webp" />
 </div>
 
 <hr className="my-0 mt-2 mb-4" />
