Complete Best Original Anime and Manga of the Year

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -56,7 +56,7 @@ published: true
     [Category IV: Grand Prizes](#category-iv-grand-prizes)
     - [Retrospective: Anime of the Year (2004)](#retrospective-anime-of-the-year-2004)
     - [Best Returning Series](#best-returning-series)
-    - [Best Original](#best-original)
+    - [Best Original Anime](#best-original-anime)
     - [Manga of the Year](#manga-of-the-year)
     - [Film of the Year](#film-of-the-year)
     - [Anime of the Year](#anime-of-the-year)
@@ -122,7 +122,7 @@ published: true
     <li><a href="https://myanimelist.net/character/177491/Yoichi_Isagi" target="_blank" rel="noopener noreferrer">Yoichi Isagi</a>, Blue Lock</li>
     <li><a href="https://myanimelist.net/character/120015/Kumiko_Oumae" target="_blank" rel="noopener noreferrer">Kumiko Oumae</a>, Sound! Euphonium S3</li>
     <li><a href="https://myanimelist.net/character/22050/Nadeko_Sengoku" target="_blank" rel="noopener noreferrer">Nadeko Sengoku</a>, Monogatari Series: Off & Monster Season</li>
-    <li><a href="https://myanimelist.net/character/230309/Nina_Iseri" target="_blank" rel="noopener noreferrer">Nina Iseri</a>, Girls' Band Cry</li>
+    <li><a href="https://myanimelist.net/character/230309/Nina_Iseri" target="_blank" rel="noopener noreferrer">Nina Iseri</a>, Girls Band Cry</li>
 </ul>
 
 **Winners**
@@ -1089,6 +1089,95 @@ published: true
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-returning-series-peoples-choice.webp" />
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-returning-series-jury-choice.webp" />
+</div>
+
+
+<hr className="my-4" />
+
+## Best Original Anime
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Astro Note <sup>[<a href="https://myanimelist.net/anime/57391/Astro_Note" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171040/Astro-Note/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Brave Bang Bravern <sup>[<a href="https://myanimelist.net/anime/55528/Yuuki_Bakuhatsu_Bang_Bravern" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/165598/Yuuki-Bakuhatsu-Bang-Bravern/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Bucchigiri?! <sup>[<a href="https://myanimelist.net/anime/55358/Bucchigiri" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/165254/BUCCHIGIRI/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Girls Band Cry <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Jellyfish Can’t Swim in the Night <sup>[<a href="https://myanimelist.net/anime/54839/Yoru_no_Kurage_wa_Oyogenai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163078/Yoru-no-Kurage-wa-Oyogenai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Mecha-UDE <sup>[<a href="https://myanimelist.net/anime/53033/Mecha-ude_TV" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/101915/Mechaude/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Metallic Rouge <sup>[<a href="https://myanimelist.net/anime/54794/Metallic_Rouge" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162985/Metallic-Rouge/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Mayonaka Punch <sup>[<a href="https://myanimelist.net/anime/57947/Mayonaka_Punch" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/174044/Mayonaka-Punch/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Na Nare Hana Nare <sup>[<a href="https://myanimelist.net/anime/57099/Na_Nare_Hana_Nare" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170891/NaNare-HanaNare/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Negative Positive Angler <sup>[<a href="https://myanimelist.net/anime/59425/NegaPosi_Angler" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/179919/NegaPosi-Angler/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Suicide Squad Isekai <sup>[<a href="https://myanimelist.net/anime/55848/Isekai_Suicide_Squad" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166710/Isekai-Suicide-Squad/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Train to the End of the World <sup>[<a href="https://myanimelist.net/anime/53356/Shuumatsu_Train_Doko_e_Iku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155657/Shuumatsu-Train-Doko-e-Iku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winners**
+
+- **People's Choice:** Girls Band Cry
+- **Jury Choice:** Girls Band Cry
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-original-anime-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-original-anime-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Manga of the Year
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>After God <sup>[<a href="https://myanimelist.net/manga/143991/After_God" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/138577/After-God/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Sumi Eno_</li>
+
+    <li>Destroy All Humans. They Can’t Be Regenerated. <sup>[<a href="https://myanimelist.net/manga/116539/Subete_no_Jinrui_wo_Hakai_suru_Sorera_wa_Saisei_Dekinai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/105790/Subete-no-Jinrui-wo-Hakai-Suru-Sorera-wa-Saisei-Dekinai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Katsura Ise & Takuma Yokota_</li>
+
+    <li>Dinosaur Sanctuary <sup>[<a href="https://myanimelist.net/manga/142793/Dinosan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/132021/Dinosan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Itaru Kinoshita_</li>
+
+    <li>Firefly Wedding <sup>[<a href="https://myanimelist.net/manga/154679/Hotaru_no_Yomeiri" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/159142/Hotaru-no-Yomeiri/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Oreco Tachibana_</li>
+
+    <li>Fool Night <sup>[<a href="https://myanimelist.net/manga/135264/Fool_Night" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/126559/Fool-Night/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Kasumi Yasuda_</li>
+
+    <li>Gachiakuta <sup>[<a href="https://myanimelist.net/manga/144180/Gachiakuta" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/144946/Gachiakuta/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Kei Urana_</li>
+
+    <li>Medalist <sup>[<a href="https://myanimelist.net/manga/129621/Medalist" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/118371/Medalist/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Tsurumaikada_</li>
+
+    <li>Monthly in the Garden With my Landlord <sup>[<a href="https://myanimelist.net/manga/139138/Maitsuki_Niwa-tsuki_Ooya-tsuki" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/136253/Maitsuki-Niwatsuki-Ouyatsuki/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Yodokawa_</li>
+
+    <li>Hirayasumi <sup>[<a href="https://myanimelist.net/manga/137303/Hirayasumi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/132288/Hirayasumi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Shinzo Keigo_</li>
+
+    <li>My Girlfriend’s Child <sup>[<a href="https://myanimelist.net/manga/140333/Ano_Ko_no_Kodomo" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/132364/Ano-Ko-no-Kodomo/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _Mamoru Aoi_</li>
+
+    <li>Nightfall Travellers <sup>[<a href="https://myanimelist.net/manga/135820/Yuuyake_Trip" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/115304/Yuuyake-Trip/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _tomohi_</li>
+
+    <li>The Summer Hikaru Died <sup>[<a href="https://myanimelist.net/manga/141833/Hikaru_ga_Shinda_Natsu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/manga/138603/Hikaru-ga-Shinda-Natsu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> _mokumokuren_</li>
+
+</ul>
+
+**Winners**
+
+- **People's Choice:** The Summer Hikaru Died, _mokumokuren_
+- **Jury Choice:** Fool Night, _Kasumi Yasuda_
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/manga-of-the-year-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/manga-of-the-year-jury-choice.webp" />
 </div>
 
 <hr className="my-0 mt-2 mb-4" />
